{
  "version": 4,
  "terraform_version": "1.5.1",
  "serial": 25,
  "lineage": "698ab859-8254-ef34-2ff2-17e189bb1f26",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "backend-service",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/portfolio-final-123/regions/asia-south2/instanceGroups/mig-backend-asia",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              },
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/portfolio-final-123/regions/us-central1/instanceGroups/mig-backend-us",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2023-07-11T21:53:03.407-07:00",
            "description": "GLOBAL BACKEND SERVICE TO MANAGE BACKEND MIGS IN US",
            "enable_cdn": false,
            "fingerprint": "gUcOPJX5FqE=",
            "generated_id": 8838327569054142272,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/portfolio-final-123/global/healthChecks/autohealing-health-check-bs"
            ],
            "id": "projects/portfolio-final-123/global/backendServices/backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "backend-service",
            "port_name": "http",
            "project": "portfolio-final-123",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/portfolio-final-123/global/backendServices/backend-service",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "data.google_compute_image.ubuntu",
            "google_compute_health_check.autohealing-asia",
            "google_compute_health_check.autohealing-backend-service",
            "google_compute_health_check.autohealing-us",
            "google_compute_instance_template.template-portfolio-asia",
            "google_compute_instance_template.template-portfolio-us",
            "google_compute_network.my_network",
            "google_compute_region_instance_group_manager.mig-asia",
            "google_compute_region_instance_group_manager.mig-us",
            "google_compute_subnetwork.subnet_asia",
            "google_compute_subnetwork.subnet_us",
            "google_service_account.compute-sa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-lb-check",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "8080",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-07-11T21:49:42.333-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/portfolio-final-123/global/firewalls/allow-lb-health-check",
            "log_config": [],
            "name": "allow-lb-health-check",
            "network": "https://www.googleapis.com/compute/v1/projects/portfolio-final-123/global/networks/portfolio-network",
            "priority": 1000,
            "project": "portfolio-final-123",
            "self_link": "https://www.googleapis.com/compute/v1/projects/portfolio-final-123/global/firewalls/allow-lb-health-check",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "allow-lb-health-check"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.my_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-07-11T21:49:42.332-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/portfolio-final-123/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/portfolio-final-123/global/networks/portfolio-network",
            "priority": 1000,
            "project": "portfolio-final-123",
            "self_link": "https://www.googleapis.com/compute/v1/projects/portfolio-final-123/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.my_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "frontend-lb-portfolio",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/portfolio-final-123/global/forwardingRules/frontend-global",
            "ip_address": "34.111.51.127",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "frontend-global",
            "port_range": "80-80",
            "project": "portfolio-final-123",
            "self_link": "https://www.googleapis.com/compute/v1/projects/portfolio-final-123/global/forwardingRules/frontend-global",
            "target": "https://www.googleapis.com/compute/v1/projects/portfolio-final-123/global/targetHttpProxies/target-proxy-portfolio"
          },
          "dependencies": [
            "data.google_compute_image.ubuntu",
            "google_compute_backend_service.backend-service",
            "google_compute_health_check.autohealing-asia",
            "google_compute_health_check.autohealing-backend-service",
            "google_compute_health_check.autohealing-us",
            "google_compute_instance_template.template-portfolio-asia",
            "google_compute_instance_template.template-portfolio-us",
            "google_compute_network.my_network",
            "google_compute_region_instance_group_manager.mig-asia",
            "google_compute_region_instance_group_manager.mig-us",
            "google_compute_subnetwork.subnet_asia",
            "google_compute_subnetwork.subnet_us",
            "google_compute_target_http_proxy.default",
            "google_compute_url_map.default",
            "google_service_account.compute-sa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "my_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/portfolio-final-123/global/networks/portfolio-network",
            "mtu": 0,
            "name": "portfolio-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "portfolio-final-123",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/portfolio-final-123/global/networks/portfolio-network"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router-asia",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp": [
              {
                "advertise_mode": "DEFAULT",
                "asn": 64514,
                "keepalive_interval": 20
              }
            ],
            "creation_timestamp": "2023-07-11T21:50:24.582-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/portfolio-final-123/regions/asia-south2/routers/router-asia",
            "name": "router-asia",
            "network": "https://www.googleapis.com/compute/v1/projects/portfolio-final-123/global/networks/portfolio-network",
            "project": "portfolio-final-123",
            "region": "asia-south2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/portfolio-final-123/regions/asia-south2/routers/router-asia"
          },
          "dependencies": [
            "google_compute_network.my_network",
            "google_compute_subnetwork.subnet_asia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router-us",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp": [
              {
                "advertise_mode": "DEFAULT",
                "asn": 64514,
                "keepalive_interval": 20
              }
            ],
            "creation_timestamp": "2023-07-11T21:50:00.918-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/portfolio-final-123/regions/us-central1/routers/router-us",
            "name": "router-us",
            "network": "https://www.googleapis.com/compute/v1/projects/portfolio-final-123/global/networks/portfolio-network",
            "project": "portfolio-final-123",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/portfolio-final-123/regions/us-central1/routers/router-us"
          },
          "dependencies": [
            "google_compute_network.my_network",
            "google_compute_subnetwork.subnet_us"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat-asia",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "portfolio-final-123/asia-south2/router-asia/router-nat-asia",
            "log_config": [
              {
                "enable": true,
                "filter": "ALL"
              }
            ],
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "router-nat-asia",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "portfolio-final-123",
            "region": "asia-south2",
            "router": "router-asia",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_PRIMARY_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.my_network",
            "google_compute_router.router-asia",
            "google_compute_subnetwork.subnet_asia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat-us",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "portfolio-final-123/us-central1/router-us/router-nat-us",
            "log_config": [
              {
                "enable": true,
                "filter": "ALL"
              }
            ],
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "router-nat-us",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "portfolio-final-123",
            "region": "us-central1",
            "router": "router-us",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_PRIMARY_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.my_network",
            "google_compute_router.router-us",
            "google_compute_subnetwork.subnet_us"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet_asia",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-07-11T21:49:48.232-07:00",
            "gateway_address": "192.168.0.1",
            "id": "projects/portfolio-final-123/regions/asia-south2/subnetworks/subnet-asia",
            "ip_cidr_range": "192.168.0.0/28",
            "name": "subnet-asia",
            "network": "https://www.googleapis.com/compute/v1/projects/portfolio-final-123/global/networks/portfolio-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "portfolio-final-123",
            "purpose": "PRIVATE",
            "region": "asia-south2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/portfolio-final-123/regions/asia-south2/subnetworks/subnet-asia",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.my_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet_us",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-07-11T21:49:44.860-07:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/portfolio-final-123/regions/us-central1/subnetworks/subnet-usa",
            "ip_cidr_range": "10.0.0.0/28",
            "name": "subnet-usa",
            "network": "https://www.googleapis.com/compute/v1/projects/portfolio-final-123/global/networks/portfolio-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "portfolio-final-123",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/portfolio-final-123/regions/us-central1/subnetworks/subnet-usa",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.my_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-07-11T21:54:08.835-07:00",
            "id": "projects/portfolio-final-123/global/targetHttpProxies/target-proxy-portfolio",
            "name": "target-proxy-portfolio",
            "project": "portfolio-final-123",
            "proxy_bind": false,
            "proxy_id": 5448529415279709983,
            "self_link": "https://www.googleapis.com/compute/v1/projects/portfolio-final-123/global/targetHttpProxies/target-proxy-portfolio",
            "url_map": "https://www.googleapis.com/compute/v1/projects/portfolio-final-123/global/urlMaps/urlmap"
          },
          "dependencies": [
            "data.google_compute_image.ubuntu",
            "google_compute_backend_service.backend-service",
            "google_compute_health_check.autohealing-asia",
            "google_compute_health_check.autohealing-backend-service",
            "google_compute_health_check.autohealing-us",
            "google_compute_instance_template.template-portfolio-asia",
            "google_compute_instance_template.template-portfolio-us",
            "google_compute_network.my_network",
            "google_compute_region_instance_group_manager.mig-asia",
            "google_compute_region_instance_group_manager.mig-us",
            "google_compute_subnetwork.subnet_asia",
            "google_compute_subnetwork.subnet_us",
            "google_compute_url_map.default",
            "google_service_account.compute-sa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-07-11T21:53:56.880-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/portfolio-final-123/global/backendServices/backend-service",
            "default_url_redirect": [],
            "description": "default  url map",
            "fingerprint": "MF3r406JKSM=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/portfolio-final-123/global/urlMaps/urlmap",
            "map_id": 3770757813270449931,
            "name": "urlmap",
            "path_matcher": [],
            "project": "portfolio-final-123",
            "self_link": "https://www.googleapis.com/compute/v1/projects/portfolio-final-123/global/urlMaps/urlmap",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.google_compute_image.ubuntu",
            "google_compute_backend_service.backend-service",
            "google_compute_health_check.autohealing-asia",
            "google_compute_health_check.autohealing-backend-service",
            "google_compute_health_check.autohealing-us",
            "google_compute_instance_template.template-portfolio-asia",
            "google_compute_instance_template.template-portfolio-us",
            "google_compute_network.my_network",
            "google_compute_region_instance_group_manager.mig-asia",
            "google_compute_region_instance_group_manager.mig-us",
            "google_compute_subnetwork.subnet_asia",
            "google_compute_subnetwork.subnet_us",
            "google_service_account.compute-sa"
          ]
        }
      ]
    }
  ]
}